--- a/dotfiles/.config/hypr/wofi/style.css
+++ b/dotfiles/.config/hypr/wofi/style.css
@@ -1,6 +1,14 @@
-/* 
- * Copyright (C) 2020-2023 Aditya Shakya <adi1090x@gmail.com>
-*/
+/**************************************************************
+ *                                                            *
+ *            Wofi Window Filter Launcher Style               *
+ *                                                            *
+ *         Author: Iglinsc <igli.linux@gmail.com>             *
+ *                                                            *
+ * This file contains the styling information for the Wofi    *
+ * window filter launcher.                                    *
+ *                                                            *
+ **************************************************************/
+
 
 /** ********** Fonts ********** **/
 * {
